Overflow Css fix

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@
 
 body {
     background-color: var(--fondo--color);
+    overflow-x: hidden;
 }
 
 main {
